# libsql_dart

./: CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: precompile.yml  publish.yml
cargokit/gradle/: plugin.gradle
example/: .env  pubspec.yaml
example/android/app/: build.gradle
example/lib/: bootstrap.dart  main.dart
example/lib/features/task/: task_list.dart
example/lib/features/task/repositories/: task_repository.dart
example/lib/infra/: libsql_task_repository.dart
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/windows/flutter/: generated_plugins.cmake
lib/src/: libsql_client.dart  statement.dart  transaction.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: connection.dart  libsql.dart  statement.dart  transaction.dart
lib/src/rust/utils/: params.dart  result.dart  return_value.dart
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: connection.rs  libsql.rs  statement.rs  transaction.rs
