[package]
edition = "2021"
name = "libsql_dart"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
async-std = "1.13.1"
flutter_rust_bridge = "=2.10.0"
futures = "0.3.31"
hyper-rustls = {version = "0.25", features = ["webpki-roots"]}
lazy_static = "1.5.0"
libsql = "0.9.8"
log = "0.4.27"
tokio = "1.45.1"
uuid = "1.17.0"
