[package]
edition = "2021"
name = "libsql_dart"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
hyper-rustls = { version = "0.25", features = ["webpki-roots"] }
libsql = { version = "0.9.23", features = ["encryption"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
